--- a/pages/sonar-project.properties
+++ b/pages/sonar-project.properties
@@ -1,9 +1,9 @@
-sonar.projectKey=POS
-sonar.projectName=Your New Project
+sonar.projectKey=Pos-system
+sonar.projectName=POS System
 sonar.sources=.
 sonar.language=php
 sonar.sourceEncoding=UTF-8
 sonar.host.url=http://localhost:9000
 
-# Optional: Exclude libraries
+# Optional exclusions
 sonar.exclusions=vendor/**,node_modules/**,*.min.js
